Fixed weird image sizing bug that seemingly only happens on Firefox
yeah idk

--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -167,6 +167,10 @@
 	.image {
 		padding: 0;
 		display: flex;
+
+		img {
+			min-height: 500px;
+		}
 	}
 
 	.left {
